# DiscordBridge

./: .gitignore  .gitmodules  CMakeLists.txt  client_to_channel.json
bot/: Bot.cxx  Bot.hpp  BotSettings.cxx  BotSettings.hpp
common/: ChatRoom.cxx  ChatRoom.hpp  Defer.hpp  Logger.hpp  MessageFormat.cxx  MessageFormat.hpp  Server.cxx  Server.hpp  common.hpp  util.hpp
src/: CMakeLists.txt  main.cxx
